# sisvan-clustering-analysis

./: project.ipynb  pyproject.toml
data/: cnes_coordenadas_recife.csv
