[project]
name = "sisvan-clustering-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.3.1",
    "pyarrow>=19.0.0,<20.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
